--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 Welcome to my homepage
-<img src = "/L235F16/images/28722133885_050a963742_c.jpg "
+<img width = "150" src = "/L235F16/images/28722133885_050a963742_c.jpg "
 </body>
 
 
