--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 Welcome to my homepage
 <img width = "1500" src = "/L235F16/images/28722133885_050a963742_c.jpg "
 
-,a href= "100" src= '/L235F16/HTML/AboutMe.html'
+<a href= "/L235F16/HTML/AboutMe.html">About Me
 </body>
 
 
