--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 
 <body>
+<font color="red" face="arial" size="2">
 Welcome to my homepage
 <img width = "700" src = "/L235F16/images/28722133885_050a963742_c.jpg ">
 
