--- a/AboutMe.html
+++ b/AboutMe.html
@@ -6,6 +6,8 @@
 <body>
   All About Me, Isabelle
 </body>
+img width = "700" src = " /L235F16/images/28106545743_17d18d60c4_c.jpg ">
 
+</body>
 </html>
 
