--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,6 +8,8 @@
 </body>
 <img width = "700" src = " /L235F16/images/28106545743_17d18d60c4_c.jpg ">
 
+<img width = "700" src = "/L235F16/images/28104534354_1b2806f269_z.jpg ">
+
 </body>
 </html>
 
