--- a/AboutMe.html
+++ b/AboutMe.html
@@ -7,7 +7,7 @@
   All About Me, Isabelle
 </body>
 <img width = "700" src = " /L235F16/images/28106545743_17d18d60c4_c.jpg ">
-
+</body>
 <img width = "700" src = "/L235F16/images/28104534354_1b2806f269_z.jpg ">
 
 </body>
