--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,12 +4,13 @@
 <title>About-Me</title>
 
 <body>
-  All About Me, Isabelle
+  All About Me, Isabelle Marshall Magical & Extra-Ordinary Girl 
 </body>
 <img width = "700" src = " /L235F16/images/28106545743_17d18d60c4_c.jpg ">
 </body>
 <img width = "700" src = "/L235F16/images/28104534354_1b2806f269_z.jpg ">
-
+</body>
+<img width = "700" src = "/L235F16/images/Blog368_Young+Love+Young+Romance+DC+House+Ad.jpg ">
 </body>
 </html>
 
