--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,6 +3,15 @@
 <head>
 <title>About-Me</title>
 
+<style>
+body {
+    background-color: lightblue;
+}
+</style>
+</head>
+<body>
+
+
 <body>
   All About Me, Isabelle Marshall Magical & Extra-Ordinary Girl 
 </body>
