--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,13 +4,12 @@
 <title>About-Me</title>
 
 <style>
+<head>
 body {
     background-color: lightblue;
 }
 </style>
 </head>
-<body>
-
 
 <body>
   All About Me, Isabelle Marshall Magical & Extra-Ordinary Girl 
