--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,16 +1,13 @@
-<html>
-  
 <head>
-   
-<title>About-Me</title>
-
+ <title>About-Me</title>
+ 
 <style>
-<head>
 body {
     background-color: lightblue;
 }
 </style>
 </head>
+<body>
 
 <body>
   All About Me, Isabelle Marshall Magical & Extra-Ordinary Girl 
