--- a/AboutMe.html
+++ b/AboutMe.html
@@ -8,6 +8,17 @@ body {
 </style>
 </head>
 <body>
+ 
+ <!DOCTYPE html>
+<html>
+<body>
+
+<p> Please Enjoy these Pictures </p>
+
+
+
+</body>
+</html>
 
 <body>
   All About Me, Isabelle Marshall Magical & Extra-Ordinary Girl 
