--- a/AboutMe.html
+++ b/AboutMe.html
@@ -30,13 +30,9 @@ body {
 <img width = "400" src = "/L235F16/images/Blog368_Young+Love+Young+Romance+DC+House+Ad.jpg ">
 </body>
 <img width = "500" src = "/L235F16/images/28873667504_b99b6092e2_b.jpg "
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table {
-    font-family: arial;
+
+<table style= width 100>
+    font-family: arial, sans-serif, 
     border-collapse: collapse;
     width: 100%;
 }
