--- a/AboutMe.html
+++ b/AboutMe.html
@@ -47,22 +47,21 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-</body>
-
 <!DOCTYPE html>
 <html>
 <body>
 
-<table>
+<table style="width:100%">
   <tr>
     <th>Mood</th>
-    <th>Music</th>
+    <th>Song</th> 
     <th>Vibe</th>
   </tr>
   <tr>
     <td>Nostalgia</td>
     <td>Summertime</td>
     <td>Sultry</td>
+    
   </tr>
   <tr>
     <td>Summertime</td>
@@ -70,11 +69,11 @@ tr:nth-child(even) {
     <td>Xstatic</td>
   </tr>
   <tr>
-    <td>awe</td>
+    <td>Awe</td>
     <td>At Your Best (You Are Love)</td>
     <td>smooth&dreamy</td>
   </tr>
-  <tr>
-    <td>Sass</td>
-    <td>Blueberries for Breakfast</td>
-    <td>60spsychedelia</td>
+</table>
+
+</body>
+</html>
