--- a/AboutMe.html
+++ b/AboutMe.html
@@ -15,7 +15,9 @@ body {
 
 <p><b> Please Enjoy these Pictures </b></p>
 
-
+</style>
+</head>
+<body>
 <table style="width:100%">
   <tr>
     <th>Mood</th>
