--- a/AboutMe.html
+++ b/AboutMe.html
@@ -30,12 +30,12 @@ body {
   </tr>
   <tr>
     <td>Summer time</td>
-    <a href="https://www.youtube.com/watch?v=NLb8jWYvYmU"></a><td>Powa</td>
+    <a href="https://www.youtube.com/watch?v=NLb8jWYvYmU"><td>Powa</td></a>
     <td>Xstatic</td>
   </tr>
   <tr>
     <td>Awe</td>
-    <td>At Your Best (You Are Love)</td>
+    <a href="https://www.youtube.com/watch?v=8D1Zn-Ij6Mw"><td>At Your Best (You Are Love)</td></a>
     <td>smooth&dreamy</td>
   </tr>
 </table>
@@ -64,9 +64,5 @@ td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
-}
 
-tr:nth-child(even) {
-    background-color: #dddddd;
-}
 
