--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,19 +23,19 @@ body {
     <th>Vibe</th>
   </tr>
   <tr>
-    <a href="https://www.youtube.com/watch?v=lnXLVTi_m_M "><td>Nostalgia</td></a>
+    <td><a href="https://www.youtube.com/watch?v=lnXLVTi_m_M ">Nostalgia</a></td>
     <td>Summertime</td>
     <td>Sultry</td>
     
   </tr>
   <tr>
     <td>Summer time</td>
-    <a href="https://www.youtube.com/watch?v=NLb8jWYvYmU"><td>Powa</td></a>
+    <td><a href="https://www.youtube.com/watch?v=NLb8jWYvYmU">Powa</a></td>
     <td>Xstatic</td>
   </tr>
   <tr>
     <td>Awe</td>
-    <a href="https://www.youtube.com/watch?v=8D1Zn-Ij6Mw"><td>At Your Best (You Are Love)</td></a>
+    <td></td><a href="https://www.youtube.com/watch?v=8D1Zn-Ij6Mw">At Your Best (You Are Love)</a></td>
     <td>smooth&dreamy</td>
   </tr>
 </table>
