--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,8 +23,8 @@ body {
     <th>Vibe</th>
   </tr>
   <tr>
-    <td><a href="https://www.youtube.com/watch?v=lnXLVTi_m_M ">Nostalgia</a></td>
-    <td>Summertime</td>
+    </td>Nostalgia</td>
+    <td>Summertime<a href=https://www.youtube.com/watch?v=lnXLVTi_m_M"</a></td>
     <td>Sultry</td>
     
   </tr>
