--- a/AboutMe.html
+++ b/AboutMe.html
@@ -24,7 +24,7 @@ body {
   </tr>
   <tr>
     </td>Nostalgia</td>
-    <td><a href=https://www.youtube.com/watch?v=lnXLVTi_m_M">Summertime</a></td>
+    <td><a href="https://www.youtube.com/watch?v=lnXLVTi_m_M">Summertime</a></td>
     <td>Sultry</td>
     
   </tr>
@@ -35,7 +35,7 @@ body {
   </tr>
   <tr>
     <td>Awe</td>
-    <td></td><a href="https://www.youtube.com/watch?v=8D1Zn-Ij6Mw">At Your Best (You Are Love)</a></td>
+    <td><a href="https://www.youtube.com/watch?v=8D1Zn-Ij6Mw">At Your Best (You Are Love)</a></td>
     <td>smooth&dreamy</td>
   </tr>
 </table>
