--- a/AboutMe.html
+++ b/AboutMe.html
@@ -23,7 +23,7 @@ body {
     <th>Vibe</th>
   </tr>
   <tr>
-    </td>Nostalgia</td>
+    <td>Nostalgia</td>
     <td><a href="https://www.youtube.com/watch?v=lnXLVTi_m_M">Summertime</a></td>
     <td>Sultry</td>
     
