--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,7 +13,7 @@ body {
 <html>
 <body>
 
-<p><b> Please Enjoy these Pictures </b></p>
+<p><b> Please Enjoy these Pictures & Songs</b></p>
 
 <body>
 <table style="width:100%">
