--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <head>
   <title>Hello World</title>
 <head>
+  
+<marquee behavior=scroll direction=up scrollamount=2 scrolldelay=8 height=533 style='position:absolute; left:63%; top:27px; width:30; height:533px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=6 scrolldelay=48 height=562 style='position:absolute; left:24%; top:16px; width:30; height:562px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=5 scrolldelay=12 height=680 style='position:absolute; left:83%; top:152px; width:30; height:680px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=2 scrolldelay=39 height=504 style='position:absolute; left:48%; top:192px; width:30; height:504px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=4 scrolldelay=49 height=634 style='position:absolute; left:71%; top:7px; width:30; height:634px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=2 scrolldelay=35 height=542 style='position:absolute; left:26%; top:186px; width:30; height:542px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=6 scrolldelay=37 height=543 style='position:absolute; left:8%; top:31px; width:30; height:543px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=4 scrolldelay=32 height=631 style='position:absolute; left:85%; top:93px; width:30; height:631px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=3 scrolldelay=33 height=585 style='position:absolute; left:72%; top:192px; width:30; height:585px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
+<marquee behavior=scroll direction=up scrollamount=5 scrolldelay=13 height=655 style='position:absolute; left:68%; top:98px; width:30; height:655px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
 
 
 <body>
