--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>Hello World</title>
+
+<body bgcolor="#FF0000"> 
 <head>
   
 <marquee behavior=scroll direction=up scrollamount=2 scrolldelay=8 height=533 style='position:absolute; left:63%; top:27px; width:30; height:533px;'><img src=http://dl4.glitter-graphics.net/pub/121/121154vmqwujj6i0.gif border=0></marquee>
