--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Welcome to my homepage
 <img width = "700" src = "/L235F16/images/28722133885_050a963742_c.jpg ">
 
 <a href= "/L235F16/AboutMe.html">About Me</a>
-<a href= "/L235F16/MyVideos">My Videos</a>
+<a href= "/L235F16/MyVideos.html">My Videos</a>
 </body>
 
 
