--- a/MyVideos.html
+++ b/MyVideos.html
@@ -1,3 +1,13 @@
+<head>
+ <title>About-Me</title>
+ 
+<style>
+body {
+    background-color: lightblue;
+}
+</style>
+</head>
+<body>
 <!DOCTYPE html>
 <html>
 <body>
