--- a/AboutMe.html
+++ b/AboutMe.html
@@ -54,5 +54,8 @@ body {
 </body>
 <img width = "500" src = "/L235F16/images/28873667504_b99b6092e2_b.jpg "
 
+     
+<img width = "700" src= "/L235F16/images/astro_w2gw_01_isabelle_marshall.69466.22969.gif">
+
 
 
