--- a/AboutMe.html
+++ b/AboutMe.html
@@ -53,8 +53,7 @@ body {
 <img width = "400" src = "/L235F16/images/Blog368_Young+Love+Young+Romance+DC+House+Ad.jpg ">
 </body>
 <img width = "500" src = "/L235F16/images/28873667504_b99b6092e2_b.jpg "
-
-     
+</body>     
 <img width = "700" src= "/L235F16/images/astro_w2gw_01_isabelle_marshall.69466.22969.gif">
 
 
