--- a/AboutMe.html
+++ b/AboutMe.html
@@ -56,5 +56,5 @@ body {
 </body>     
 <img width = "700" src= "/L235F16/images/astro_w2gw_01_isabelle_marshall.69466.22969.gif">
 
-<p><b> ~ I am an Aquarius with M00N and ASCENDANT in SAG ~ Venus in the 1ST House and Mars in Leo the 8th ~ ~ ~ 
+<p><b> ~ I am an Aquarius with M00N and ASCENDANT in SAG ~ Venus in the 1ST House and Mars in Leo the 8th ~ ~ ~ </b></p>
 
