--- a/AboutMe.html
+++ b/AboutMe.html
@@ -63,7 +63,7 @@ body {
 <body>
 
 <h2>Hex Grrls</h2>
-<img src="<iframe src="//giphy.com/embed/3vZIZ9MZuJsKk" width="480" height="323" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/scooby-doo-3vZIZ9MZuJsKk">via GIPHY</a></p>">
+<img src="<iframe src="//giphy.com/embed/3vZIZ9MZuJsKk" width="480" height="323" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/scooby-doo-3vZIZ9MZuJsKk">
 
 </body>
 </html>
