--- a/AboutMe.html
+++ b/AboutMe.html
@@ -69,3 +69,16 @@ body {
 </html>
 
 <p><b> I like WITCHES and 1960's Romance Comics.</b></p>
+
+<!DOCTYPE html>
+<html>
+<body>
+ 
+<h2> The Mamas and the Papas</h2>
+<img width= "300" src="/ L235F16/images/giphy-1.gif">
+<p><b> Are my favorite band, I love Cass Elliot, aka Mama Cass.</b></p>
+ 
+ </body>
+</html>
+
+
