--- a/AboutMe.html
+++ b/AboutMe.html
@@ -76,7 +76,7 @@ body {
  
 <h2> The Mamas and the Papas</h2>
 <img width= "300" src="/L235F16/images/giphy-1.gif">
-<p><b> Are my favorite band, I love Cass Elliot, aka Mama Cass.</b></p>
+<p><b> Are my favorite band, I love Cass Elliot, aka Mama Cass. (Pictured above in the GR00VY GO GO BOOTS)</b></p>
  
  </body>
 </html>
