--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -1,1 +1,16 @@
 
+<head>
+ <title>Image Essay</title>
+ 
+<style>
+body {
+    background-color: lightblue;
+}
+</style>
+</head>
+<body>
+ 
+ <!DOCTYPE html>
+<html>
+<body>
+  
