--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -13,7 +13,7 @@ body {
  <!DOCTYPE html>
 <html>
 <body>
- <img src="/L235F16/images/hdgefault.jpg"></img>
- </html>
+<img src="/L235F16/images/hdgefault.jpg">
+</html>
 </body>
  
