--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -13,7 +13,8 @@ body {
  <!DOCTYPE html>
 <html>
 <body>
- <img src="/L235F16/images/hdgefault.jpg"></img>
-</html>
-</body>
- 
+
+
+ <img src="/L235F16/images/hqdefault.jpg"></img>
+ </html>
+ <body>
