--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -14,7 +14,11 @@ body {
 <html>
 <body>
 
-
+<p>
+ <a href="http://pucedaddy.github.io/L235F16/">
  <img src="/L235F16/images/hqdefault.jpg"></img>
+ </a>
+ </p>
  </html>
  <body>
+  
