--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -22,3 +22,12 @@ body {
  </html>
  <body>
   
+ <html>
+ <body>
+  
+  <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.48.49 PM.png"></img>
+  
+  </html>
+  <body>
+
+  
