--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -26,8 +26,11 @@ body {
  <body>
   
   <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.48.49 PM.png"></img>
+  <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.36.01 PM.png"></img>
+
   
   </html>
   <body>
+   
 
   
