--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -27,7 +27,8 @@ body {
   
   <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.48.49 PM.png"></img>
   </html>
-  <body>
+  </body>
+
   <html>
   <body>
   <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.36.01 PM.png"></img>
