--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -41,7 +41,7 @@ body {
  <a href="http://pcg217.github.io/L235F16/">
   <img src=" L235F16/images/Screen Shot 2016-09-28 at 11.49.04 PM.png"></img>
  </html>
- <body>
+ </body>
 
 
   
