--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -40,7 +40,7 @@ body {
 <body>
  <p>
   <a href="http://pcg217.github.io/L235F16/">
-  <img src="L235F16/images/Screen Shot 2016-09-28 at 11.49.04 PM.png"></img>
+  <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.49.04 PM.png"></img>
   </a>
   </p>
   </html>
