--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -47,11 +47,11 @@ body {
   </html>
   </body>
 
-<html>
-<body>
+`<html>
+`<body>
  <img src="/L235F16/images/Screen Shot 2016-09-28 at 11.33.59 PM.png"></img>
-</html>
-</body>
+  </html>
+  </body>
 
 
   
