--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -53,5 +53,15 @@ body {
   </html>
   </body>
 
+<!DOCTYPE html>
+<html>
+<body>
+  <p>
+   <a href="http://dg6533.github.io/L235F16/HTML/AboutMe.html"></img>
+   <img src="/L235F16/images/bd7566acf90a877f0f25608f09ac1002.jpg"></img>
+ </a>
+</p>
+</html>
+</body>
 
   
