--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -64,4 +64,15 @@ body {
    </html>
    </body>
 
-  
+<!DOCTYPE html>
+<html>
+<body>
+ <p>
+  <a href="http://jp0915.github.io/L235F16/HTML/AboutMe.html"></img>
+  <img src="/L235F16/images/528.gif"></img>
+  </a>
+  </p>
+  </html>
+  </body>
+
+
