--- a/ImageEssay.html
+++ b/ImageEssay.html
@@ -75,4 +75,15 @@ body {
   </html>
   </body>
 
+<!DOCTYPE html>
+<html>
+<body>
+ <p>
+  <a href="http:jessdagg.github.io/L235F16/html/aboutme.html"></img>
+  <img src="/L235F16/images/images.jpg"></img>
+   </a>
+   </p>
+   </html>
+   </body>
+
 
