--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ Welcome to my homepage
 
 <a href= "/L235F16/AboutMe.html">About Me</a>
 <a href= "/L235F16/ImageEssay.html">Image Essay</a>
+  <a href= "/L235F16/reply.html">Response to Eliza</a>
 </body>
 
 
