--- a/reply.html
+++ b/reply.html
@@ -1,10 +1,16 @@
 
-<html>
-<head>
-  <title>Response Essay</title>
 
-<body bgcolor="#FF0000"> 
 <head>
+ <title>Response Essay</title>
+ 
+<style>
+body {
+    background-color: lightblue;
+}
+</style>
+</head>
+<body>
+ 
  <!DOCTYPE html>
 <html>
 <body>
