--- a/reply.html
+++ b/reply.html
@@ -15,8 +15,10 @@ body {
 <html>
 <body>
 
-<img width = "700" src = "L235F16/images/Have_a_Nice_Day!_styrofoam_food_container.JPG">
-
+<img src = "L235F16/images/Have_a_Nice_Day!_styrofoam_food_container.JPG">
+ </a>
+ <br>
+ </br>
 <img width = "700" src = "L235F16/images/enhanced-buzz-23632-1342127581-1.jpg">
 
 <img width = "400" src = "L235F16/images/smiling-girl-wallpapers_38099_1280x720.jpg">
