--- a/poem.html
+++ b/poem.html
@@ -5,7 +5,7 @@
     <head>
 
         <title>DiGiTiLiS</title>
-
+<img border=0 alt="free glitter text and family website at FamilyLobby.com" src="http://www.familylobby.com/common/tt11362694fltt.gif">
     </head> 
 
     <body>
