--- a/poem.html
+++ b/poem.html
@@ -22,7 +22,7 @@
             <body>
 <a>        
 <p>
- <img src="L235F16/images/Digitalis_purpurea_Koehler_drawing-1.jpg"></img>
+ <img width= "700" src="L235F16/images/Digitalis_purpurea_Koehler_drawing-1.jpg">
  <a/>
  <p/>
 
