--- a/poem.html
+++ b/poem.html
@@ -19,7 +19,7 @@
         <br/>
         <!is that what you all want!>
         <!the pandrogyne said the body is cheap suitecase to shuttle around our conciousness> 
-        <! but the> suitecase does not bother me so much
+        <! but the> suitecase <!does not bother me so much>
         
         <html>
             <body>
