--- a/poem.html
+++ b/poem.html
@@ -20,6 +20,7 @@
         <!is that what you all want!>
         <!the pandrogyne said the body is cheap suitecase to shuttle around our conciousness> 
         <! but the> suitecase <!does not bother me so much>
+        it is a pleasure vehicle after all 
         
         <html>
             <body>
